<?xml version="1.0"?>
<package format="2">
  <name>example3</name>
  <version>1.0.0</version>
  <description>A package to simulate a laser scanner and a robot listening for its data.</description>
  <maintainer email="fabrizio.romanelli@gmail.com">Fabrizio Romanelli</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/test</url>
  <author>Fabrizio Romanelli</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>